guidaemacsauctex.tex: 1. rimuovo il pacchetto lipsum. Per ora l'unica cosa da concludere sarebbe la ricerca diretta-inversa su Linux: ho provato a vedere ma non ne sono venuto a capo 2. inizio ad abbozzare le conclusioni

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -14,7 +14,6 @@
 Emacs per LaTeX]
 
 \usepackage{guidaemacsauctex}
-\usepackage{lipsum}
 
 \begin{document}
 
@@ -432,11 +431,6 @@ mentre in openSUSE si può eseguire il comando:
 $ sudo zypper install aspell-it
 \end{lstlisting}
 
-
-\section{Ricerca diretta inversa}
-\label{mg:sec:ricdirinv}
-
-\textcolor{red}{\lipsum[2]}
 
 %% --------------------------------------------------------------------------
 %% Mac OS
@@ -1027,7 +1021,17 @@ indentata.
 \chapter{Conclusioni}
 \label{chap:fine}
 
-\textcolor{red}{\lipsum[1]}
+I questa guida tematica abbiamo spiegato come installare \emacs\ e \auctex sui
+sistemi operativi maggiormente conosciuti; abbiamo mostrato come usare \emacs
+per scrivere un documento semplice e poi uno più complesso. Per finire come
+usare il correttore ortografico.
+
+Crediamo che questo programma ed il pacchetto \auctex\ non siano così difficili
+da usare come, purtroppo, anche i più bravi guru di \LaTeX\ affermano. Forse è
+una questione di pregiudizi o di abitudini. Certo è che il tormentone
+dell'editor non finirà mai.
+
+Ai già citati manuali ufficiali rimandiamo il lettore alla mailing list dei vari pacchetti
 
 \bibliography{guidaemacsauctex}
 
