Ancora sulle conclusioni + pulizia del codice

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -41,12 +41,12 @@ ufficiale \url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
 \end{itemize}
 \textsc{alle seguenti condizioni:}
 \begin{itemize}
-\item[\Large\ccAttribution] Devi attribuire la paternità dell'opera nei modi indicati
-      dall'autore o da chi ti ha dato l'opera in licenza e in modo tale da non
-      suggerire che essi avallino te o il modo in cui tu usi l'opera.
+\item[\Large\ccAttribution] Devi attribuire la paternità dell'opera nei modi
+      indicati dall'autore o da chi ti ha dato l'opera in licenza e in modo tale
+      da non suggerire che essi avallino te o il modo in cui tu usi l'opera.
 \item[\Large\ccNonCommercial] Non puoi usare quest'opera per fini commerciali.
-\item[\Large\ccShareAlike] Se alteri o trasformi quest'opera, o se la usi per crearne
-      un'altra, puoi distribuire l'opera risultante solo con una licenza
+\item[\Large\ccShareAlike] Se alteri o trasformi quest'opera, o se la usi per
+      crearne un'altra, puoi distribuire l'opera risultante solo con una licenza
       identica o equivalente a questa.
 \end{itemize}
 
@@ -207,7 +207,6 @@ A questo punto \emacs{} è pronto per scrivere documenti in \LaTeX: l'utente
 infatti non deve specificare nessun percorso circa gli eseguibili della
 distribuzione \LaTeX\ installata perché \emacs{} li trova da solo.
 
-
 \section{Installare AUC\TeX}
 \label{oi:sec:installauctex}
 
@@ -246,7 +245,6 @@ nella variabile d'ambiente \textsf{PATH}. Secondo, aggiungere al proprio file
 \end{lstlisting}
 dove, la prima e la terza sono quelle strettamente necessarie, mentre la seconda
 riga serve a risolvere dei problemi con le versioni precedenti di \emacs.
-
 
 \section{Ricerca diretta inversa}
 \label{oi:sec:ricdirinv}
@@ -381,7 +379,6 @@ del file (o dei file) che si vogliono modificare:
 $ emacs file1.tex file2.tex
 \end{lstlisting}
 
-
 \section{Installare AUC\TeX}
 \label{mg:sec:installauctex}
 
@@ -409,7 +406,6 @@ sufficiente aggiungere l'opzione \verb!--no-install-recommends!
 \begin{lstlisting}
 $ sudo apt-get install --no-install-recommends auctex
 \end{lstlisting}
-
 
 \section{Correttore ortografico}
 \label{mg:sec:aspell}
@@ -477,7 +473,6 @@ graffe e la tilde, scrivendo queste righe nel file \filestyle{.emacs}
 (setq ns-alternate-modifier nil)
 \end{lstlisting}
 
-
 \section{Installare AUC\TeX}
 \label{ml:sec:installauctex}
 
@@ -540,7 +535,6 @@ Come visualizzatore si usa \progstyle{Skim},
 inversa dal \filestyle{pdf}, i dettagli sulla configurazione di \emacs{} e
 \progstyle{Skim} sono riportati nel paragrafo~\ref{ml:sec:ricdirinv}.
 
-
 \section{Correttore ortografico}
 \label{ml:sec:aspell}
 
@@ -572,7 +566,6 @@ Come ultima cosa è necessario configurare \emacs\ aggiungendo al
 (setq-default ispell-program-name "aspell")
 (setq ispell-dictionary "italiano")
 \end{lstlisting}
-
 
 \section{Ricerca diretta inversa}
 \label{ml:sec:ricdirinv}
@@ -627,7 +620,6 @@ aggiungere queste righe al file \filestyle{.emacs}
   (ns-do-applescript "tell application \"Emacs\" to activate"))
 (add-hook 'server-switch-hook 'ns-raise-emacs)
 \end{lstlisting}
-
 
 \chapter{Primi passi in \emacs}
 \label{chap:primi-passi-emacs}
@@ -786,7 +778,6 @@ errati anche quando sono corretti, cosa che accade perché quel termine non è
 presente nel dizionario: si può aggiungerlo, premendo il tasto centrale del
 mouse quando questo è posizionato sulla parola e scegliere \texttt{Save word}.
 
-
 \section{Sinossi delle principali scorciatoie}
 \label{sec:sinossi:sco}
 
@@ -876,7 +867,6 @@ installazione.
   C-x 0 & delete-window & Chiude la ``window'' attuale \\
   C-x 1 & - & Chiude tutte le ``windows'' tranne quella attuale \\
 \end{longtable}
-
 
 \chapter{Personalizzare \emacs{} \& \auctex}
 \label{chap:personal}
@@ -1021,7 +1011,7 @@ indentata.
 \chapter{Conclusioni}
 \label{chap:fine}
 
-I questa guida tematica abbiamo spiegato come installare \emacs\ e \auctex sui
+I questa guida tematica abbiamo spiegato come installare \emacs\ e \auctex\ sui
 sistemi operativi maggiormente conosciuti; abbiamo mostrato come usare \emacs
 per scrivere un documento semplice e poi uno più complesso. Per finire come
 usare il correttore ortografico.
@@ -1031,7 +1021,7 @@ da usare come, purtroppo, anche i più bravi guru di \LaTeX\ affermano. Forse è
 una questione di pregiudizi o di abitudini. Certo è che il tormentone
 dell'editor non finirà mai.
 
-Ai già citati manuali ufficiali rimandiamo il lettore alla mailing list dei vari pacchetti
+CONTINUA
 
 \bibliography{guidaemacsauctex}
 
